--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ h3 {font-size: 24px;}
 h4 {font-size: 20px;}
 h5 {font-size: 18px;}
 h6 {font-size: 16px;}
- 
+
 p.lead {
 	font-size: 24px;
 	font-weight: 200;
@@ -461,9 +461,10 @@ label {
 }
 .infoTitle {
     font-family: "Roboto";
-    font-size: 8em;
+    font-size: 3em;
     padding-left: 50px;
     padding-top: 120px;
+    font-weight: 100;
 }
 .infoTitle span {
     color:#ff4c4c;
