--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -625,8 +625,9 @@ label {
     position: absolute;
     margin-top: 80px;
     margin-left: 0;
-    width: 50%;
-    height: 90%
+    width: 100%;
+    min-height: 100%;
+    padding-bottom: 92.5%
 }
 .lobbyTitle {
     font-family: "Roboto";
