--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,7 +621,7 @@ label {
 /*	LOBBY STYLE
 	==================================================*/ 
 .lobby {
-    background-color:#d0d0d0;
+    background-color:#eaeaea;
     position: absolute;
     margin-top: 80px;
     margin-left: 0;
