--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,10 +624,8 @@ label {
     background-color:#eaeaea;
     position: absolute;
     margin-top: 80px;
-    margin-left: 0;
     width: 100%;
-    min-height: 100%;
-    padding-bottom: 80%
+    height: auto;
 }
 .lobbyTitle {
     font-size:4em;
@@ -646,10 +644,40 @@ label {
     font-weight: bold;
     font-size: 2em;
 }
-
-
-
-
+.lobbyD1 {
+    text-align: center;
+    font-family: "Roboto";
+    padding-top: 1%;
+    line-height: 60px;
+    font-weight:100;
+}
+.lobbyD {
+    text-align: center;
+    font-family: "Roboto";
+    padding-top: 4.7%;
+    line-height: 60px;
+    font-weight:100;
+}
+.lobbyD1 span {
+    text-align: center;
+    font-family: "Roboto";
+    padding-top: 1%;
+    line-height: 60px;
+    font-weight: 400;
+    border-bottom: 6px solid #ff4c4c;
+}
+.lobbyD span {
+    text-align: center;
+    font-family: "Roboto";
+    padding-top: 6%;
+    line-height: 60px;
+    font-weight: 400;
+     border-bottom: 6px solid #ff4c4c;
+}
+.activeLogo {
+    height: 100px;
+    margin-bottom: 50px;
+}
 
 
 
