--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -625,19 +625,19 @@ label {
     position: absolute;
     margin-top: 80px;
     width: 100%;
-    height: auto;
+    height: 90vh;
 }
 .lobbyTitle {
     font-size:4em;
-    margin-top: 30px;
+    margin-top: 10px;
     font-family: "Roboto";
     text-align: center;
     font-weight: 100;
 }
 .lobbyStatus {
     text-align: center;
-    font-size: 1.3em;
-    margin-top:20px;
+    font-size: 1.8em;
+    margin-top: 5%;
 }
 .lobbyStatus span {
     color:#ff4c4c;
@@ -647,21 +647,19 @@ label {
 .lobbyD1 {
     text-align: center;
     font-family: "Roboto";
-    padding-top: 1%;
     line-height: 60px;
     font-weight:100;
 }
 .lobbyD {
     text-align: center;
     font-family: "Roboto";
-    padding-top: 4.7%;
+    margin-top:2.5%;
     line-height: 60px;
     font-weight:100;
 }
 .lobbyD1 span {
     text-align: center;
     font-family: "Roboto";
-    padding-top: 1%;
     line-height: 60px;
     font-weight: 400;
     border-bottom: 6px solid #ff4c4c;
@@ -669,16 +667,11 @@ label {
 .lobbyD span {
     text-align: center;
     font-family: "Roboto";
-    padding-top: 6%;
+    margin-top:-20px;
     line-height: 60px;
     font-weight: 400;
      border-bottom: 6px solid #ff4c4c;
 }
-.activeLogo {
-    height: 130px;
-    margin-bottom: 15px;
-}
-
 
 
 
