--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,13 +623,12 @@ label {
 .lobby {
     background-color:#eaeaea;
     position: absolute;
-    margin-top: 80px;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 }
 .lobbyTitle {
     font-size:4em;
-    margin-top: 10px;
+    margin-top: 12%;
     font-family: "Roboto";
     text-align: center;
     font-weight: 100;
@@ -647,20 +646,20 @@ label {
 .lobbyD1 {
     text-align: center;
     font-family: "Roboto";
-    line-height: 60px;
+    line-height: 150%;
     font-weight:100;
 }
 .lobbyD {
     text-align: center;
     font-family: "Roboto";
-    margin-top:2.5%;
-    line-height: 60px;
+    margin-top:6%;
+    line-height: 150%;
     font-weight:100;
 }
 .lobbyD1 span {
     text-align: center;
     font-family: "Roboto";
-    line-height: 60px;
+    line-height: 150%;
     font-weight: 400;
     border-bottom: 6px solid #ff4c4c;
 }
@@ -668,7 +667,7 @@ label {
     text-align: center;
     font-family: "Roboto";
     margin-top:-20px;
-    line-height: 60px;
+    line-height: 150%;
     font-weight: 400;
      border-bottom: 6px solid #ff4c4c;
 }
