--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,8 +670,59 @@ label {
     font-weight: 400;
      border-bottom: 6px solid #ff4c4c;
 }
-
-
+/*	Group Page STYLE
+	==================================================*/ 
+.eventpic {
+    margin-top: 80px;
+    position: relative;
+}
+.groupEvent {
+    width: 100vw;
+    font-family: "Roboto";
+    font-weight: 200;
+    font-size: 3.5em;
+    margin-top: -10%;
+    margin-left: 3%;
+    position:absolute;
+    color: white;
+}
+.groupEvent span {
+    font-weight: 400;
+    font-size: 2em;
+}
+.eventDate {
+    position: absolute;
+    color: white;
+    margin-top: -22%;
+    margin-left: 7%;
+}
+.eventDate span {
+    color: #ff3333;
+}
+.eventTime {
+    position:absolute;
+    color:white;
+    margin-top: -22%;
+    margin-left: 40%;
+}
+.eventTime span {
+    color: #ff3333;
+}
+.eventDistance {
+    position:absolute;
+    color:white;
+    margin-top: -22%;
+    margin-left: 78%;
+}
+.eventDistance span {
+    color: #ff3333;
+}
+#image-wrapper {
+    position: relative;
+}
+#imageoverlay {
+    position: absolute;
+}
 
 /*	Responsive
 	==================================================*/ 
