--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,13 +365,13 @@ label {
 /*	Navbar
 	==================================================*/
 .navbar-inverse .navbar-brand {
-	padding: 25px 10px;
+	padding: 25px 15px;
     font-size: 2.2em;
-	margin-right: 15px;
+	margin-right: 5px;
 	color:#116687;
 }
 .navbar-inverse .navbar-brand span {
-    color:#ff4c4c;
+    color:#ff4c4c;1
 }
 .navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
 	color: #000;
@@ -461,11 +461,30 @@ label {
 }
 .infoTitle {
     font-family: "Roboto";
-    font-size: 3em;
+    font-size: 4em;
     padding-left: 50px;
-    padding-top: 120px;
+    padding-top: 150px;
+    margin-bottom:5px;
     font-weight: 100;
+    color: #ffffff;
 }
+.bannerTextBack {
+	position:absolute;
+    top: 190px;
+    width: 60%;
+    height: 130px;
+    background-color:black;
+    z-index:0;
+    opacity:0.5;
+}
+.subTitle {
+    font-family: "Roboto";
+    font-size: 2em;
+    padding-left: 50px;
+    font-weight: 100;
+    color: #ffffff;
+}
+
 .infoTitle span {
     color:#ff4c4c;
 }
@@ -524,7 +543,7 @@ label {
 @media screen and (max-width: 768px) {
     .preback {margin-top:72px;}
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 500px) {
 	.banner2 {display: none;}
 }
 @media screen and (max-width: 768px) {
@@ -651,7 +670,7 @@ label {
 .lobbyD {
     text-align: center;
     font-family: "Roboto";
-    margin-top:6%;
+    margin-top:3%;
     line-height: 150%;
     font-weight:100;
 }
