Changes to Match Results

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -858,3 +858,11 @@ label {
 		margin: 0;
 	}
 }
+
+.matchProfiles {
+	width: 19.7%;
+	margin: 0;
+padding: 0;
+}
+.matchProfiles:hover {
+	opacity: 0.3;
